feat: implemented an HTTP body interceptor, allowing a more generic approach to how we handle JSON-LD request/response bodies.
