# services/kg-inbox-api/src/main/kotlin/kvasir/services/api/kg/inbox/impl/ChangeBodyReader.kt
@@ -1,97 +1,0 @@
-package kvasir.services.api.kg.inbox.impl
-
-import com.github.jsonldjava.utils.JsonUtils
-import io.vertx.core.json.JsonObject
-import jakarta.ws.rs.BadRequestException
-import jakarta.ws.rs.core.MediaType
-import jakarta.ws.rs.core.MultivaluedMap
-import jakarta.ws.rs.core.UriInfo
-import jakarta.ws.rs.ext.MessageBodyReader
-import jakarta.ws.rs.ext.Provider
-import kvasir.definitions.kg.changeops.Assertion
-import kvasir.definitions.rdf.JsonLdHelper
-import kvasir.definitions.rdf.KvasirVocab
-import kvasir.services.api.kg.inbox.ChangeRequestInput
-import java.io.InputStream
-import java.lang.reflect.Type
-import java.util.*
-
-@Provider
-class ChangeBodyReader(
-    private val uriInfo: UriInfo
-) : MessageBodyReader<ChangeRequestInput> {
-
-    private val defaultContext = mapOf(
-        "graph" to KvasirVocab.graph,
-        "insert" to KvasirVocab.insert,
-        "delete" to KvasirVocab.delete,
-        "assert" to KvasirVocab.assert,
-        "with" to KvasirVocab.with,
-    )
-
-    override fun isReadable(
-        clazz: Class<*>,
-        type: Type,
-        annotations: Array<out Annotation>,
-        mediaType: MediaType
-    ): Boolean {
-        return clazz == ChangeRequestInput::class.java
-    }
-
-    override fun readFrom(
-        clazz: Class<ChangeRequestInput>,
-        type: Type,
-        annotations: Array<out Annotation>,
-        mediaType: MediaType,
-        headers: MultivaluedMap<String, String>,
-        inputStream: InputStream
-    ): ChangeRequestInput {
-        val jsonLD = JsonUtils.fromInputStream(inputStream) as MutableMap<String, Any>
-        val userProvidedContext = jsonLD["@context"] as? Map<String, Any> ?: emptyMap()
-        if (!jsonLD.containsKey("@context")) {
-            jsonLD["@context"] =
-                defaultContext.plus("@vocab" to uriInfo.requestUri.toASCIIString().removeSuffix("inbox"))
-        }
-        val resolvedJsonLD = JsonLdHelper.toCompactFQForm(jsonLD)
-        return ChangeRequestInput(
-            graph = resolvedJsonLD[KvasirVocab.graph] as? String ?: "",
-            assert = resolvedJsonLD[KvasirVocab.assert]?.let { assertions ->
-                valueAsJsonArray(assertions)
-                    .map { JsonObject(it as Map<String, Any>).mapTo(Assertion::class.java) }
-            }
-                ?: emptyList(),
-            with = resolvedJsonLD[KvasirVocab.with]?.let { where ->
-                where as String
-            },
-            insert = resolvedJsonLD[KvasirVocab.insert]?.let { inserts ->
-                valueAsJsonArray(inserts).map {
-                    if (it is Map<*, *>) assignIds(it as Map<String, Any>) else it
-                }
-            }
-                ?: emptyList(),
-            delete = resolvedJsonLD[KvasirVocab.delete]?.let { deletes -> valueAsJsonArray(deletes) }
-                ?: emptyList(),
-            context = userProvidedContext
-        )
-    }
-
-    private fun assignIds(entity: Map<String, Any>): Map<String, Any> {
-        val id = (entity["@id"] as? String) ?: uriInfo.requestUri.resolve("#${UUID.randomUUID()}").toString()
-        return mapOf("@id" to id).plus(entity.entries.filterNot { (key, _) -> key == "@id" }.associate { (key, value) ->
-            key to when (value) {
-                is Map<*, *> -> assignIds(value as Map<String, Any>)
-                is List<*> -> value.map { if (it is Map<*, *>) assignIds(it as Map<String, Any>) else it }
-                else -> value
-            }
-        })
-    }
-
-    private fun valueAsJsonArray(value: Any): List<Any> {
-        return when (value) {
-            is List<*> -> value.mapNotNull { it }
-            is Map<*, *> -> listOf(value)
-            is String -> listOf(value)
-            else -> throw BadRequestException("Expected value to be a JSON array or object")
-        }
-    }
-}
